; ModuleID = '/home/carl/AnghaBench/libevent/extr_bufferevent_filter.c_be_underlying_writebuf_full.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_bufferevent_filter.c_be_underlying_writebuf_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent_filtered = type { %struct.bufferevent* }
%struct.bufferevent = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }

@BEV_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bufferevent_filtered*, i32)* @be_underlying_writebuf_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @be_underlying_writebuf_full(%struct.bufferevent_filtered* %0, i32 %1) #0 {
  %3 = alloca %struct.bufferevent_filtered*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bufferevent*, align 8
  store %struct.bufferevent_filtered* %0, %struct.bufferevent_filtered** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.bufferevent_filtered*, %struct.bufferevent_filtered** %3, align 8
  %7 = getelementptr inbounds %struct.bufferevent_filtered, %struct.bufferevent_filtered* %6, i32 0, i32 0
  %8 = load %struct.bufferevent*, %struct.bufferevent** %7, align 8
  store %struct.bufferevent* %8, %struct.bufferevent** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @BEV_NORMAL, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %28

12:                                               ; preds = %2
  %13 = load %struct.bufferevent*, %struct.bufferevent** %5, align 8
  %14 = getelementptr inbounds %struct.bufferevent, %struct.bufferevent* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %28

18:                                               ; preds = %12
  %19 = load %struct.bufferevent*, %struct.bufferevent** %5, align 8
  %20 = getelementptr inbounds %struct.bufferevent, %struct.bufferevent* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i64 @evbuffer_get_length(i32 %21)
  %23 = load %struct.bufferevent*, %struct.bufferevent** %5, align 8
  %24 = getelementptr inbounds %struct.bufferevent, %struct.bufferevent* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp sge i64 %22, %26
  br label %28

28:                                               ; preds = %18, %12, %2
  %29 = phi i1 [ false, %12 ], [ false, %2 ], [ %27, %18 ]
  %30 = zext i1 %29 to i32
  ret i32 %30
}

declare dso_local i64 @evbuffer_get_length(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
